src/assets/css/style.css
/* ... */
.toy-card-item {
  /* margin-left: 30px; */
  width: 222px;
  height: 342px;
  padding: 16px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  background: radial-gradient(109.56% 109.56% at 0% -2.94%, rgba(255, 255, 255, 0.5) 0%, rgba(179, 246, 255, 0.5) 100%);
  backdrop-filter: blur(4px);
  border-radius: 10px;

  font-family: Steppe;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 12px;
}

.toy-card-item-elect {
  position: relative;
  background: radial-gradient(109.56% 109.56% at 0% -2.94%, rgba(255, 255, 255, 0.4) 0%, rgba(179, 246, 255, 0.4) 100%);
  border: 2px solid rgba(157, 211, 168, 1);
  box-shadow: 3px 3px 5px 1px rgba(206, 239, 228, 0.1);
  color: #f4f0e6;
}

.toy-card-item-elect::after {
  content: '';
  position: absolute;
  /* background-image: url('../icons/star.png'); */
  background-image: url('../icons/basket1.png');
  background-size: 20px 20px;
  background-repeat: no-repeat;
  width: 20px;
  height: 20px;
  top: 16px;
  left: 10px;
}

.toy-name {
  margin-left: 30px;
  width: 150px;
  font-family: Neucha;
  font-style: normal;
  font-weight: normal;
  font-size: 18px;
  line-height: 20px;
}

.toy-image {
  margin-left: 50px;
  margin-bottom: 16px;
  width: 85px;
}

.toy-count,
.toy-year,
.toy-shape,
.toy-color,
.toy-size,
.toy-favorite {
  font-family: Steppe;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
}

/*main styles end*/

/*footer start*/

.footer {
  padding: 10px;
}

.footer-wrap {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* background: blueviolet; */
}

.footer-info {
  width: 150px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 16px;
}

.github-link,
.rsschool-logo {
  text-decoration: none;
  color: #fff;
}

/*footer end*/

.visually-hidden {
  display: none;
}

@media (max-width: 2000px) {
  .h3-toys {
    margin-top: 20px;
  }
}

@media (max-width: 1600px) {
  .container {
    margin: 0 auto;
    width: 1300px;
  }

  .t-container {
    height: calc(100vh - 120px);
    display: grid;
    grid-template-columns: 480px 840px;
  }

  .h3-toys {
    margin-top: 30px;
  }
}

@media (max-width: 1350px) {
  .container {
    margin: 0 auto;
    width: 1024px;
  }

  .header-wrap {
    justify-content: space-around;
  }

  .header-banner {
    display: none;
  }

  .t-container {
    height: calc(100vh - 120px);
    display: grid;
    grid-template-columns: 420px 580px;
  }

  .filters {
    padding-left: 20px;
    /* background-color: rgba(155, 155, 255, 0.2); */
  }

  .toy-cards {
    padding-left: 50px;
  }
}

@media (max-width: 1024px) {
  .body {
    min-height: 100vh;
    display: grid;
    /* grid-template-rows: 70px 1fr 50px; */
    grid-template-rows: 140px auto 50px;
  }

  .container {
    margin: 0 auto;
    width: 750px;
  }

  .header-wrap {
    min-height: 140px;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
  }

  .header-title {
    margin-left: 0px;
    margin-top: 10px;
    font-size: 40px;
  }

  .t-container {
    height: auto;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 400px max-content;
  }

  .filters {
    padding-left: 20px;
    /* background-color: rgba(155, 155, 255, 0.2); */
  }

  .sort-filter {
    padding-top: 10px;
    padding-bottom: 30px;
  }

  .categories {
    display: grid;
    grid-template-columns: 400px 300px;
    grid-template-areas:
      'g1 g9'
      'g2 g8'
      'g3 g6'
      'g4 g7'
      'g5 g7';
    grid-gap: 0px 30px;
    overflow: hidden;
  }

  .grid-1 {
    grid-area: g1;
  }

  .grid-2 {
    grid-area: g2;
  }

  .grid-3 {
    grid-area: g3;
  }

  .grid-4 {
    grid-area: g4;
  }

  .grid-5 {
    grid-area: g5;
  }

  .grid-6 {
    grid-area: g6;
  }

  .grid-7 {
    grid-area: g7;
  }

  .grid-8 {
    grid-area: g8;
  }

  .grid-9 {
    grid-area: g9;
  }

  .slider-year-counter-start {
    padding-left: 0px;
  }

  .slider-year-counter-end {
    padding-left: 20px;
  }

  .size-cont {
    flex-direction: column;
  }

  .colors-cont {
    padding-left: 0px;
  }

  .toy-forms {
    padding-left: 0px;
  }

  .h3-toys {
    margin-top: 15px;
  }

  .number-of-copies,
  .year-of-purchase {
    width: 95%;
  }

  .favorites {
    display: flex;
    margin-top: 15px;
    padding-left: 20px;
  }

  .setting-buttons {
    padding-left: 10px;
    padding-top: 0px;
    padding-bottom: 10px;
  }

  .toy-cards {
    height: auto;
    min-height: 400px;
    display: flex;
    flex-wrap: wrap;
    /* gap: 20px; */
    padding: 10px;
    /* background-color: rgba(255, 155, 155, 0.2); */
    overflow: visible;
  }
}

